--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "socket.io": "^3.0.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.9",
-    "@types/express": "^4.17.9"
+    "@types/express": "^4.17.9",
+    "@types/socket.io": "^2.1.12"
   }
 }
